pylibftdi changes
=================

0.10pre
 * moved docs -> /doc
 * moved pylibftdi/tests -> /tests - makes nosetests etc work better
 * removed legacy support for Driver() to acting as a Device()
0.9
 * improved and extended tests
 * made a start on some Sphinx-based documentation
 * fixed long-standing issue with input from a BitBangDevice
 * allow the PID/VID to be changed
 * add new examples
   - basic web server to toggle / read IO bits
   - magic_candle.py - example of using input and output together
   - pin_read.py - read and match values on device pins
 * All of this needs some tidying, but it fixes some key issues and has been unreleased too long.
0.8.1
 * fix issue with bitbang following API changes in 0.8
 * add tests for bitbang mode
 * refactor tests; fix text-based tests in Python3
 * slight refactor Device() to improve testability (_read and _write methods)
0.8
 * added some unit tests
 * API changes:
   - when opening a device with a device_id parameter, this will now check
     against both serial number and (if that fails), the device description.
     Opening by device type (under the same proviso that an arbitrary device
     will be selected if multiple matching devices are attached as when no
     device_id is given) is frequently easier than matching by serial number.
   - added flush(), flush_input() and flush_output() operations. This is
     modelled after the pySerial API providing separate flush operations, and
     gets the Device API closer to that of files.
   - increased file-API compatibility, with line-oriented methods and iteration
0.7
 * support multiple attached devices
 * API changes:
   - separation between driver and device. Generally, now use Device() /
     BitBangDevice() rather than Driver / BitBangDriver(), though older code
     _should_ still work via some shims (though with Deprecation warnings).
   - first parameter in Device() and BitBangDevice() is a device ID - the serial